# RAJA-examples

./: CMakeLists.txt  LICENSE  README.md
Kripke-v1.1/: CMakeLists.txt
Kripke-v1.1/Kripke-v1.1-RAJA/: CMakeLists.txt  Kripke.cpp  Kripke.h  KripkeRAJA.h
Kripke-v1.1/Kripke-v1.1-RAJA/Kripke/: CMakeLists.txt  DView.h  Grid.cpp  Kernel.cpp  SubTVec.h  Subdomain.cpp  Subdomain.h  Sweep_Solver.cpp  Timing.cpp
Kripke-v1.1/Kripke-v1.1-RAJA/Kripke/Kernel/: DataPolicy.h
Kripke-v1.1/Kripke-v1.1-RAJA/Kripke/Test/: TestKernels.cpp
Kripke-v1.1/Kripke-v1.1-baseline/: Kripke.cpp  Kripke.h
Kripke-v1.1/Kripke-v1.1-baseline/Kripke/: ParallelComm.cpp  SubTVec.h  Subdomain.cpp  Sweep_Solver.cpp
Kripke-v1.1/Kripke-v1.1-baseline/Kripke/Kernel/: Kernel_3d_ZDG.cpp
LULESH-v1.0/LULESH-v1.0_RAJA-variants/: CMakeLists.txt  luleshPolicy.hxx  luleshRAJA-parallel-FT.cxx  luleshRAJA-parallel.cxx  luleshRAJA-serial.cxx
LULESH-v1.0/LULESH-v1.0_baseline/: lulesh.cc  luleshOMP.cc  luleshOMP_NG.cc
LULESH-v2.0/LULESH-v2.0_RAJA-variants/LULESH-v2.0_RAJA-IndexSet/: CMakeLists.txt  lulesh-init.cc  lulesh-viz.cc  lulesh.cc  lulesh.h  lulesh_stl.h
LULESH-v2.0/LULESH-v2.0_RAJA-variants/LULESH-v2.0_RAJA-MICfriendly/: CMakeLists.txt  lulesh-init.cc  lulesh-viz.cc  lulesh.cc  lulesh.h  lulesh_ptr.h  lulesh_raw.h  lulesh_stl.h  lulesh_tuple.h
LULESH-v2.0/LULESH-v2.0_RAJA-variants/LULESH-v2.0_RAJA-basic/: CMakeLists.txt  lulesh-viz.cc  lulesh.cc  lulesh.h
LULESH-v2.0/LULESH-v2.0_baseline/: CMakeLists.txt  lulesh.cc
